src/test/deca/context/valid/custom/object/dec_class_methods.deca
class car {
    protected int maxSpeed;

    void setMaxSpeed(int newSpeed) {
        maxSpeed = newSpeed;
    }

    int getMaxSpeed(int newSpeed) {
            return maxSpeed;
    }
}