src/test/deca/context/invalid/custom/object/dec_class_methods.deca
class car {
    protected int maxSpeed;

    void setMaxSpeed(int newSpeed) {
        maxSpeed = newSpeed;
    }

    void getMaxSpeed(int newSpeed) {
            return maxSpeed;
    }
}